# TAO_2.0

./: .env.example  .gitignore  .hygen.js  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  Dockerfile  KIMI.md  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: pages.yml  test.yml
_templates/: README.md
_templates/agent/new/: agent.ejs.t  prompt.js  test.ejs.t
_templates/collector/new/: collector.ejs.t  prompt.js
_templates/doc/new/: doc.ejs.t  prompt.js
_templates/plugin/new/: agent.ejs.t  prompt.js  readme.ejs.t  test.ejs.t
_templates/scoring/new/: prompt.js  scorer.ejs.t  test.ejs.t
_templates/test/new/: prompt.js  test.ejs.t
bench/: README.md
docs/: agent_architecture.md  agent_lineage.md  auto_trading.md  bittensor_basics.md  cricket_brain_demo.md  getting_started.md  learning.md  miner_readiness.md  plan.md  plugins.md  risk_model.md  run_log.md  strategy_plugins.md  subnet_repo_health_demo.md  subnet_research_method.md  trade_research_method.md  trading_brain.md  trading_council.md  validator_readiness.md  wallet_safety.md
examples/cricket_brain/: README.md  cricket_brain_agent.py
examples/subnet_repo_health/: README.md  subnet_repo_health_agent.py
landing/: de.html  imprint.html  index.html  main.js  privacy.html  robots.txt  sitemap.xml  style.css
scripts/: _bench.py  bench_agents.py  bench_approval_gate.py  bench_live.py  bench_orchestrator.py
src/: __init__.py
src/agents/: __init__.py  _hardware.py  dashboard_design_agent.py  documentation_agent.py  fullstack_dev_agent.py  infra_devops_agent.py  market_trade_agent.py  miner_engineering_agent.py  protocol_research_agent.py  qa_test_agent.py  risk_security_agent.py  subnet_discovery_agent.py  subnet_scoring_agent.py  system_check_agent.py  training_experiment_agent.py  validator_engineering_agent.py  wallet_watch_agent.py
src/cli/: __init__.py  tao_swarm.py
src/collectors/: __init__.py  chain_readonly.py  github_repos.py  market_data.py  subnet_metadata.py  wallet_watchonly.py
src/dashboard/: app.py
src/orchestrator/: __init__.py  approval_gate.py  capabilities.py  context.py  orchestrator.py  plugin_loader.py  progress.py  resilience.py  task_router.py
src/scoring/: __init__.py  miner_readiness_score.py  risk_score.py  subnet_score.py  trade_risk_score.py  validator_readiness_score.py
tao_swarm/agents/: __init__.py  _hardware.py  _lineage.py  dashboard_design_agent.py  documentation_agent.py  fullstack_dev_agent.py  infra_devops_agent.py  market_trade_agent.py  miner_engineering_agent.py  protocol_research_agent.py  qa_test_agent.py  subnet_discovery_agent.py  subnet_scoring_agent.py  training_experiment_agent.py  validator_engineering_agent.py  wallet_watch_agent.py
tao_swarm/cli/: tao_swarm.py
tao_swarm/collectors/: _base.py  chain_readonly.py  github_repos.py  market_data.py  subnet_metadata.py  wallet_watchonly.py
tao_swarm/dashboard/: __init__.py  app.py  cheat_sheet.py  theme.py  trading_view.py
tao_swarm/orchestrator/: __init__.py  approval_gate.py  capabilities.py  orchestrator.py  plugin_loader.py  progress.py  resilience.py  task_router.py
tao_swarm/scoring/: __init__.py  miner_readiness_score.py  risk_score.py  trade_risk_score.py
tao_swarm/trading/: __init__.py  backtest.py  brain.py  council.py  executor.py  guards.py  keystore.py  ledger.py  modes.py  reconcile.py  runner.py  signer.py  strategy_base.py  strategy_loader.py
tao_swarm/trading/learning/: __init__.py  calibration.py  ensemble.py  tracker.py
tao_swarm/trading/strategies/: __init__.py  mean_reversion.py  momentum_rotation.py
tests/: test_agent_context_bus.py  test_agent_contract.py  test_agent_data_lineage.py  test_approval_gate.py  test_approval_gate_auto_trading.py  test_base_collector.py  test_bench_scripts.py  test_capabilities_and_progress.py  test_chain_readonly_collector.py  test_chain_readonly_sdk_v10.py  test_cli.py  test_cli_trade.py  test_collector_mock_paths.py  test_collector_text_sanitize.py  test_concurrent_execution.py  test_cricket_brain_demo.py  test_cuda_detection.py  test_dashboard_charts_and_controls.py  test_dashboard_helpers.py  test_dashboard_theme_and_cheatsheet.py  test_dashboard_trading_view.py  test_documentation_drift.py  test_live_smoke.py  test_orchestrator_bugfixes.py  test_orchestrator_resilience.py  test_plugin_loader.py  test_quick_win_fixes.py  test_return_shape_consistency.py  test_risk_bittensor_detectors.py  test_risk_score.py  test_risk_security_agent.py  test_runner_council_integration.py  test_subnet_repo_health_demo.py  test_subnet_score.py  test_subnet_score_chain_criteria.py  test_subscan_wallet_live.py  test_task_param_routing.py  test_trading_brain.py  test_trading_council.py  test_trading_ensemble_attribution.py  (+12 more)
