# pyproject.toml — tao_swarm
#
# After the src/ → tao_swarm/ layout migration this file is now the
# canonical install path. Users get a real ``pip install`` plus the
# ``tao-swarm`` console script:
#
#     pip install -e .          # from the repo
#     pip install -r requirements.txt -r requirements-dev.txt
#     tao-swarm --help
#
# Runtime deps still live in ``requirements.txt`` for now to stay
# compatible with the Docker setup; we intentionally leave
# ``[project.dependencies]`` empty until that lockfile is migrated
# in a follow-up.

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "tao-swarm"
version = "1.0.0"
description = "Locally-run, read-only multi-agent intelligence system for Bittensor (TAO)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["bittensor", "tao", "multi-agent", "orchestrator", "read-only"]
# License classifier: BUSL is not OSI-approved (it's source-available,
# not Open Source), so we use "Other/Proprietary License" per PEP 639
# guidance. The actual license terms are in LICENSE; the SPDX
# expression below names them precisely.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
tao-swarm = "tao_swarm.cli.tao_swarm:cli"

[project.urls]
Repository = "https://github.com/BEKO2210/TAO_2.0"
Issues = "https://github.com/BEKO2210/TAO_2.0/issues"

[tool.hatch.build.targets.wheel]
packages = ["tao_swarm"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "_templates",
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
# Initial baseline: pycodestyle errors, pyflakes, isort. The stricter
# rule sets (B / UP / SIM / RUF) will be enabled in a follow-up
# tightening pass once the existing codebase has been swept once.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable names (`l`) — flagged by audit, follow-up
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
# Don't fail on missing imports for optional deps (bittensor, streamlit, etc.)
ignore_missing_imports = true
exclude = [
    "_templates/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
